--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
   </head>
   <body>
     <h1>Hinos Globo SP - Brasileirão 2024 Série B</h1>
-    <div class="container"></div>
+    <div class="container">
+      <button class="soundBtn" id="AMA">
+        <img src="img/amazonas-fc.png" />
+        <audio src="" id="Amazonas"></audio>
+      </button>
+      <button class="soundBtn" id="AMG">
+        <img src="img/AmericaFCMG.png" />
+        <audio
+          id="AmericaMG"
+          src="audio/Hino_do_America-MG_-_Globo.mp3"
+        ></audio>
+      </button>
+    </div>
   </body>
 </html>
