--- a/index.html
+++ b/index.html
@@ -21,6 +21,81 @@
           src="audio/Hino_do_America-MG_-_Globo.mp3"
         ></audio>
       </button>
+      <button class="soundBtn" id="AVA">
+        <img src="img/Avai_FC.png" />
+        <audio src="" id="Avai"></audio>
+      </button>
+      <button class="soundBtn" id="BFC">
+        <img src="img/Botafogo_Ribeirao_Preto_SP.png" />
+        <audio src="" id="BotafogoSP"></audio>
+      </button>
+      <button class="soundBtn" id="BRU">
+        <img src="img/Brusque_FC-SC.png" />
+        <audio src="" id="Brusque"></audio>
+      </button>
+      <button class="soundBtn" id="CEA">
+        <img src="img/Ceará_Sporting_Club.png" />
+        <audio src="" id="Ceara"></audio>
+      </button>
+      <button class="soundBtn" id="CHA">
+        <img src="img/Chapecoense.png" />
+        <audio src="" id="Chapecoense"></audio>
+      </button>
+      <button class="soundBtn" id="CFC">
+        <img src="img/logo-coritiba-512.png" />
+        <audio
+          id="Coritiba"
+          src="audio/Hino do Coritiba - Globo SP.mp3"
+        ></audio>
+      </button>
+      <button class="soundBtn" id="CRB">
+        <img src="img/CRB_logo.png" />
+        <audio src="" id="CR_Brasil"></audio>
+      </button>
+      <button class="soundBtn" id="GOI">
+        <img src="img/goias.png" />
+        <audio id="Goias" src="audio/Hino do Goiás - Globo SP.mp3"></audio>
+      </button>
+      <button class="soundBtn" id="NOV">
+        <img src="img/GrêmioNovorizontino.png" />
+        <audio src="" id="Novorizontino"></audio>
+      </button>
+      <button class="soundBtn" id="GFC">
+        <img src="img/Guarani_FC.png" />
+        <audio src="" id="Guarani"></audio>
+      </button>
+      <button class="soundBtn" id="ITU">
+        <img src="img/Ituano_Futebol_Clube_logo.png" />
+        <audio src="" id="Ituano"></audio>
+      </button>
+      <button class="soundBtn" id="MIR">
+        <img src="img/Mirassol_FC_logo.png" />
+        <audio src="" id="Mirassol"></audio>
+      </button>
+      <button class="soundBtn" id="OPF">
+        <img src="img/operarioferroviario-pr.png" />
+        <audio src="" id="OperarioFerroviario"></audio>
+      </button>
+      <button class="soundBtn" id="PAY">
+        <img src="img/paysandu.png" />
+        <audio src="" id="Paysandu"></audio>
+      </button>
+      <button class="soundBtn" id="PON">
+        <img src="img/Ponte_Preta.png" />
+        <audio src="" id="PontePreta"></audio>
+      </button>
+      <button class="soundBtn" id="SAN">
+        <img src="img/santos-logo-escudo-9.png" />
+        <audio src="audio/Hino do Santos - Globo SP.mp3" id="Santos"></audio>
+      </button>
+      <button class="soundBtn" id="SPO">
+        <img src="img/sport-recife.png" />
+        <audio src="" id="SportRecife"></audio>
+      </button>
+      <button class="soundBtn" id="VIL">
+        <img src="img/Vila_Nova.png" />
+        <audio src="" id="VilaNova"></audio>
+      </button>
     </div>
   </body>
 </html>
