--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hinos Globo SP - Brasileirão 2024 Série B</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/mediaQuery.css" />
     <script src="js/script.js" defer></script>
   </head>
   <body>
@@ -12,7 +13,7 @@
     <div class="container">
       <button class="soundBtn" id="AMA">
         <img src="img/amazonas-fc.png" />
-        <audio src="" id="Amazonas"></audio>
+        <audio src="audio/Hino do Amazonas FC Globo.mp3" id="Amazonas"></audio>
       </button>
       <button class="soundBtn" id="AMG">
         <img src="img/AmericaFCMG.png" />
@@ -23,23 +24,35 @@
       </button>
       <button class="soundBtn" id="AVA">
         <img src="img/Avai_FC.png" />
-        <audio src="" id="Avai"></audio>
+        <audio src="audio/hino do Avaí Versão Globo.mp3" id="Avai"></audio>
       </button>
       <button class="soundBtn" id="BFC">
         <img src="img/Botafogo_Ribeirao_Preto_SP.png" />
-        <audio src="" id="BotafogoSP"></audio>
+        <audio
+          src="audio/Hino do Botafogo-SP - Globo SP.mp3"
+          id="BotafogoSP"
+        ></audio>
       </button>
       <button class="soundBtn" id="BRU">
         <img src="img/Brusque_FC-SC.png" />
-        <audio src="" id="Brusque"></audio>
+        <audio
+          src="audio/Hino do Brusque - Globo (Versão Kasan).mp3"
+          id="Brusque"
+        ></audio>
       </button>
       <button class="soundBtn" id="CEA">
         <img src="img/Ceará_Sporting_Club.png" />
-        <audio src="" id="Ceara"></audio>
+        <audio
+          src="audio/Hino do Ceará - Globo (Versão Kasan).mp3"
+          id="Ceara"
+        ></audio>
       </button>
       <button class="soundBtn" id="CHA">
         <img src="img/Chapecoense.png" />
-        <audio src="" id="Chapecoense"></audio>
+        <audio
+          src="audio/hino da Chapecoense Versão Globo original Kaike Santana.mp3"
+          id="Chapecoense"
+        ></audio>
       </button>
       <button class="soundBtn" id="CFC">
         <img src="img/logo-coritiba-512.png" />
@@ -50,7 +63,7 @@
       </button>
       <button class="soundBtn" id="CRB">
         <img src="img/CRB_logo.png" />
-        <audio src="" id="CR_Brasil"></audio>
+        <audio src="audio/Hino do CRB - Globo SP.mp3" id="CR_Brasil"></audio>
       </button>
       <button class="soundBtn" id="GOI">
         <img src="img/goias.png" />
@@ -58,31 +71,52 @@
       </button>
       <button class="soundBtn" id="NOV">
         <img src="img/GrêmioNovorizontino.png" />
-        <audio src="" id="Novorizontino"></audio>
+        <audio
+          src="audio/Hino do Grêmio Novorizontino - Globo (Versão Kasan).mp3"
+          id="Novorizontino"
+        ></audio>
       </button>
       <button class="soundBtn" id="GFC">
         <img src="img/Guarani_FC.png" />
-        <audio src="" id="Guarani"></audio>
+        <audio
+          src="audio/hino do Guarani versão globo original kaike Santana.mp3"
+          id="Guarani"
+        ></audio>
       </button>
       <button class="soundBtn" id="ITU">
         <img src="img/Ituano_Futebol_Clube_logo.png" />
-        <audio src="" id="Ituano"></audio>
+        <audio
+          src="audio/hino do Ituano Versão Globo original Kaike Santana.mp3"
+          id="Ituano"
+        ></audio>
       </button>
       <button class="soundBtn" id="MIR">
         <img src="img/Mirassol_FC_logo.png" />
-        <audio src="" id="Mirassol"></audio>
+        <audio
+          src="audio/Hino do Mirassol - Globo (Versão Kasan).mp3"
+          id="Mirassol"
+        ></audio>
       </button>
       <button class="soundBtn" id="OPF">
         <img src="img/operarioferroviario-pr.png" />
-        <audio src="" id="OperarioFerroviario"></audio>
+        <audio
+          src="audio/Hino do Operário-PR - Globo (Versão Kasan).mp3"
+          id="OperarioFerroviario"
+        ></audio>
       </button>
       <button class="soundBtn" id="PAY">
         <img src="img/paysandu.png" />
-        <audio src="" id="Paysandu"></audio>
+        <audio
+          src="audio/Hino do Paysandu - Versão Globo.mp3"
+          id="Paysandu"
+        ></audio>
       </button>
       <button class="soundBtn" id="PON">
         <img src="img/Ponte_Preta.png" />
-        <audio src="" id="PontePreta"></audio>
+        <audio
+          src="audio/hino da Ponte Preta Versão Globo original Kaike Santana.mp3"
+          id="PontePreta"
+        ></audio>
       </button>
       <button class="soundBtn" id="SAN">
         <img src="img/santos-logo-escudo-9.png" />
@@ -90,11 +124,17 @@
       </button>
       <button class="soundBtn" id="SPO">
         <img src="img/sport-recife.png" />
-        <audio src="" id="SportRecife"></audio>
+        <audio
+          src="audio/hino do Sport Recife Versão Globo original Kaike Santana.mp3"
+          id="SportRecife"
+        ></audio>
       </button>
       <button class="soundBtn" id="VIL">
         <img src="img/Vila_Nova.png" />
-        <audio src="" id="VilaNova"></audio>
+        <audio
+          src="audio/Hino do Vila Nova - Globo (Versão Kasan).mp3"
+          id="VilaNova"
+        ></audio>
       </button>
     </div>
   </body>
