Website atualizado para a temporada 2025

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/script.js" defer></script>
   </head>
   <body>
-    <h1>Hinos Globo SP - Brasileirão 2024 Série B</h1>
+    <h1>Hinos Globo SP - Brasileirão 2025 Série B</h1>
     <div class="container">
       <button class="soundBtn" id="AMA">
         <img src="img/amazonas-fc.png" />
@@ -22,6 +22,27 @@
           src="audio/Hino_do_America-MG_-_Globo.mp3"
         ></audio>
       </button>
+      <button class="soundBtn" id="ACG">
+        <img src="img/Atlético_Goianiense.svg.png" />
+        <audio
+          src="audio/hino do Atlético-GO versão Globo original Kaike Santana.mp3"
+          id="AtleticoGO"
+        ></audio>
+      </button>
+      <button class="soundBtn" id="ATH">
+        <img src="img/Athletic_Club_(Minas_Gerais).svg.png" />
+        <audio
+          src="audio/Hino Do Athletic Club - Globo.mp3"
+          id="AthleticClub"
+        ></audio>
+      </button>
+      <button class="soundBtn" id="CAP">
+        <img src="img/athletico-pr.png" />
+        <audio
+          id="AthleticoPR"
+          src="audio/Hino do Athletico - Globo SP.mp3"
+        ></audio>
+      </button>
       <button class="soundBtn" id="AVA">
         <img src="img/Avai_FC.png" />
         <audio src="audio/hino do Avaí Versão Globo.mp3" id="Avai"></audio>
@@ -31,20 +52,6 @@
         <audio
           src="audio/Hino do Botafogo-SP - Globo SP.mp3"
           id="BotafogoSP"
-        ></audio>
-      </button>
-      <button class="soundBtn" id="BRU">
-        <img src="img/Brusque_FC-SC.png" />
-        <audio
-          src="audio/Hino do Brusque - Globo (Versão Kasan).mp3"
-          id="Brusque"
-        ></audio>
-      </button>
-      <button class="soundBtn" id="CEA">
-        <img src="img/Ceará_Sporting_Club.png" />
-        <audio
-          src="audio/Hino do Ceará - Globo (Versão Kasan).mp3"
-          id="Ceara"
         ></audio>
       </button>
       <button class="soundBtn" id="CHA">
@@ -65,6 +72,27 @@
         <img src="img/CRB_logo.png" />
         <audio src="audio/Hino do CRB - Globo SP.mp3" id="CR_Brasil"></audio>
       </button>
+      <button class="soundBtn" id="CRI">
+        <img src="img/1200px-EscudoCriciumaEC.svg.png" />
+        <audio
+          src="audio/hino do Criciúma Versão Globo original Kaike Santana.mp3"
+          id="Criciuma"
+        ></audio>
+      </button>
+      <button class="soundBtn" id="CUI">
+        <img src="img/cuiaba.png" />
+        <audio
+          id="Cuiaba"
+          src="audio/hino_do_Cuiaba_Versao_Globo_original_kaike_Santana.mp3"
+        ></audio>
+      </button>
+      <button class="soundBtn" id="FER">
+        <img src="img/Escudo_Associação_Ferroviária_de_Esportes.png" />
+        <audio
+          src="audio/hino da Ferroviária Versão Globo original Kaike Santana.mp3"
+          id="Ferroviaria"
+        ></audio>
+      </button>
       <button class="soundBtn" id="GOI">
         <img src="img/goias.png" />
         <audio id="Goias" src="audio/Hino do Goiás - Globo SP.mp3"></audio>
@@ -74,27 +102,6 @@
         <audio
           src="audio/Hino do Grêmio Novorizontino - Globo (Versão Kasan).mp3"
           id="Novorizontino"
-        ></audio>
-      </button>
-      <button class="soundBtn" id="GFC">
-        <img src="img/Guarani_FC.png" />
-        <audio
-          src="audio/hino do Guarani versão globo original kaike Santana.mp3"
-          id="Guarani"
-        ></audio>
-      </button>
-      <button class="soundBtn" id="ITU">
-        <img src="img/Ituano_Futebol_Clube_logo.png" />
-        <audio
-          src="audio/hino do Ituano Versão Globo original Kaike Santana.mp3"
-          id="Ituano"
-        ></audio>
-      </button>
-      <button class="soundBtn" id="MIR">
-        <img src="img/Mirassol_FC_logo.png" />
-        <audio
-          src="audio/Hino do Mirassol - Globo (Versão Kasan).mp3"
-          id="Mirassol"
         ></audio>
       </button>
       <button class="soundBtn" id="OPF">
@@ -111,22 +118,11 @@
           id="Paysandu"
         ></audio>
       </button>
-      <button class="soundBtn" id="PON">
-        <img src="img/Ponte_Preta.png" />
+      <button class="soundBtn" id="REM">
+        <img src="img/Clube_do_Remo.svg.png" />
         <audio
-          src="audio/hino da Ponte Preta Versão Globo original Kaike Santana.mp3"
-          id="PontePreta"
-        ></audio>
-      </button>
-      <button class="soundBtn" id="SAN">
-        <img src="img/santos-logo-escudo-9.png" />
-        <audio src="audio/Hino do Santos - Globo SP.mp3" id="Santos"></audio>
-      </button>
-      <button class="soundBtn" id="SPO">
-        <img src="img/sport-recife.png" />
-        <audio
-          src="audio/hino do Sport Recife Versão Globo original Kaike Santana.mp3"
-          id="SportRecife"
+          src="audio/Hino do Remo Globo (Kasan_Kaike Santana).mp3"
+          id="Remo"
         ></audio>
       </button>
       <button class="soundBtn" id="VIL">
@@ -134,6 +130,13 @@
         <audio
           src="audio/Hino do Vila Nova - Globo (Versão Kasan).mp3"
           id="VilaNova"
+        ></audio>
+      </button>
+      <button class="soundBtn" id="VOL">
+        <img src="img/Volta_Redonda_Futebol_Clube.png" />
+        <audio
+          src="audio/hino do Volta Redonda Versão Globo original Kaike Santana.mp3"
+          id="VoltaRedonda"
         ></audio>
       </button>
     </div>
