--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hinos Globo SP - Brasileirão 2024 Série B</title>
+    <link rel="shortcut icon" href="img/icon/logo.png" type="image/png" />
+    <title>Hinos Globo SP - Brasileirão 2025 Série B</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mediaQuery.css" />
     <script src="js/script.js" defer></script>
