--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/icon/logo.png" type="image/png" />
-    <title>Hinos Globo SP - Brasileirão 2025 Série B</title>
+    <title>Hinos Globo SP - Brasileirão 2026 Série B</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mediaQuery.css" />
     <script src="js/script.js" defer></script>
   </head>
   <body>
-    <h1>Hinos Globo SP - Brasileirão 2025 Série B</h1>
+    <h1>Hinos Globo SP - Brasileirão 2026 Série B</h1>
     <div class="container">
-      <button class="soundBtn" id="AMA">
-        <img src="img/amazonas-fc.png" />
-        <audio src="audio/Hino do Amazonas FC Globo.mp3" id="Amazonas"></audio>
-      </button>
       <button class="soundBtn" id="AMG">
         <img src="img/AmericaFCMG.png" />
         <audio
@@ -37,13 +33,7 @@
           id="AthleticClub"
         ></audio>
       </button>
-      <button class="soundBtn" id="CAP">
-        <img src="img/athletico-pr.png" />
-        <audio
-          id="AthleticoPR"
-          src="audio/Hino do Athletico - Globo SP.mp3"
-        ></audio>
-      </button>
+
       <button class="soundBtn" id="AVA">
         <img src="img/Avai_FC.png" />
         <audio src="audio/hino do Avaí Versão Globo.mp3" id="Avai"></audio>
@@ -55,20 +45,14 @@
           id="BotafogoSP"
         ></audio>
       </button>
-      <button class="soundBtn" id="CHA">
-        <img src="img/Chapecoense.png" />
+      <button class="soundBtn" id="CEA">
+        <img src="img/Ceará_Sporting_Club.png" />
         <audio
-          src="audio/hino da Chapecoense Versão Globo original Kaike Santana.mp3"
-          id="Chapecoense"
+          src="audio/Hino do Ceará - Globo (Versão Kasan).mp3"
+          id="Ceara"
         ></audio>
       </button>
-      <button class="soundBtn" id="CFC">
-        <img src="img/logo-coritiba-512.png" />
-        <audio
-          id="Coritiba"
-          src="audio/Hino do Coritiba - Globo SP.mp3"
-        ></audio>
-      </button>
+
       <button class="soundBtn" id="CRB">
         <img src="img/CRB_logo.png" />
         <audio src="audio/Hino do CRB - Globo SP.mp3" id="CR_Brasil"></audio>
@@ -87,16 +71,34 @@
           src="audio/hino_do_Cuiaba_Versao_Globo_original_kaike_Santana.mp3"
         ></audio>
       </button>
-      <button class="soundBtn" id="FER">
-        <img src="img/Escudo_Associação_Ferroviária_de_Esportes.png" />
-        <audio
-          src="audio/hino da Ferroviária Versão Globo original Kaike Santana.mp3"
-          id="Ferroviaria"
-        ></audio>
+      <button class="soundBtn" id="FOR">
+        <img src="img/FORTALEZA.png" />
+        <audio id="Fortaleza" src="audio/Hino do Fortaleza - Globo.mp3"></audio>
       </button>
       <button class="soundBtn" id="GOI">
         <img src="img/goias.png" />
         <audio id="Goias" src="audio/Hino do Goiás - Globo SP.mp3"></audio>
+      </button>
+      <button class="soundBtn" id="JUV">
+        <img src="img/logo-juventude-4096.png" />
+        <audio
+          src="audio/Hino do Juventude - Globo SP (Versão Kasan).mp3"
+          id="Juventude"
+        ></audio>
+      </button>
+      <button class="soundBtn" id="LON">
+        <img src="img/LondrinaEC.png" />
+        <audio
+          src="audio/Hino do Londrina Globo (kasan_Kaike Santana).mp3"
+          id="Londrina"
+        ></audio>
+      </button>
+      <button class="soundBtn" id="NAU">
+        <img src="img/nautico.png" />
+        <audio
+          src="audio/Hino do Náutico-PE 🇵🇪 _ Globo [HQ-ADAPTADO].mp3"
+          id="Nautico"
+        ></audio>
       </button>
       <button class="soundBtn" id="NOV">
         <img src="img/GrêmioNovorizontino.png" />
@@ -112,18 +114,25 @@
           id="OperarioFerroviario"
         ></audio>
       </button>
-      <button class="soundBtn" id="PAY">
-        <img src="img/paysandu.png" />
+      <button class="soundBtn" id="PON">
+        <img src="img/Ponte_Preta.png" />
         <audio
-          src="audio/Hino do Paysandu - Versão Globo.mp3"
-          id="Paysandu"
+          src="audio/hino da Ponte Preta Versão Globo original Kaike Santana.mp3"
+          id="PontePreta"
         ></audio>
       </button>
-      <button class="soundBtn" id="REM">
-        <img src="img/Clube_do_Remo.svg.png" />
+      <button class="soundBtn" id="SBE">
+        <img src="img/São_Bernardo_Futebol_Clube_Logo.PNG" />
         <audio
-          src="audio/Hino do Remo Globo (Kasan_Kaike Santana).mp3"
-          id="Remo"
+          src="audio/Hino do São Bernardo Globo @FutezadaFC.mp3"
+          id="SaoBernardo"
+        ></audio>
+      </button>
+      <button class="soundBtn" id="SPO">
+        <img src="img/sport-recife.png" />
+        <audio
+          src="audio/hino do Sport Recife Versão Globo original Kaike Santana.mp3"
+          id="SportRecife"
         ></audio>
       </button>
       <button class="soundBtn" id="VIL">
@@ -131,13 +140,6 @@
         <audio
           src="audio/Hino do Vila Nova - Globo (Versão Kasan).mp3"
           id="VilaNova"
-        ></audio>
-      </button>
-      <button class="soundBtn" id="VOL">
-        <img src="img/Volta_Redonda_Futebol_Clube.png" />
-        <audio
-          src="audio/hino do Volta Redonda Versão Globo original Kaike Santana.mp3"
-          id="VoltaRedonda"
         ></audio>
       </button>
     </div>
